# DES_Instrument-Cluster-Team7

./: README.md
Arduino/can_test/: can_test.ino
Arduino/can_test/can_test_seedver/: can_test_seedver.ino
Arduino/can_test_seedver/: can_test_seedver.ino
Arduino/speed_sensor_test/: speed_sensor_test.ino
Configuration/v1.0/: config.txt
Configuration/v2.0/: config.txt
Docker/des-ic-team7/v0.0/: Dockerfile
Docker/des-ic-team7/v1.0/: Dockerfile
Docker/des-ic-team7/v1.1/: Dockerfile
Docker/team7-example-image/v0.0/: Dockerfile
Docker/team7-example-image/v1.0/: Dockerfile
Docker/team7-example-image/v1.1/: Dockerfile
GUI/speedometer_example/: main.qml
Gauge/Guage/: Guage.pro  Guage.pro.user.8d6559a  main.cpp  main.qml  qml.qrc  receiver.cpp  receiver.h  speedometer.cpp  speedometer.h
Gauge/build-Guage-Desktop-Debug/: Guage  Makefile  moc_speedometer.cpp  qrc_qml.cpp
Gauge_module/: CMakeLists.txt  CMakeLists.txt.user.adab8e8  CMakeLists.txt.user.dee76f4  Dial.qml  Needle.qml  SpeedText.qml  main.cpp  main.qml  qml.qrc  receiver.cpp  receiver.h  speedProvider.h
IC_GUI/: CMakeLists.txt  CMakeLists.txt.user.adab8e8  Dial.qml  Needle.qml  SpeedText.qml  WarningDialog.qml  main.cpp  main.qml  qml.qrc  receiver.cpp  receiver.h  speedProvider.h
RaspberryPi/Battery/: battery.cpp
RaspberryPi/can_receiver/: CMakeLists.txt  can_receiver.cpp  can_test.py
build-Gauge_module-Desktop-Debug/: CMakeCache.txt  Gauge_module  Gauge_module.cbp  Makefile  cmake_install.cmake
build-Gauge_module-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-0b01f8ce6d2e713e6e08.json  cmakeFiles-v1-7bcd7b1561dbd4546fd0.json  codemodel-v2-c7d4456d9a3f6fa905d6.json  index-2024-09-10T15-08-36-0379.json  target-Gauge_module-Debug-8c4426c2c0de550e9a22.json  target-Gauge_module_autogen-Debug-8084e3da0cb2c350f36d.json
build-Gauge_module-Desktop-Debug/Gauge_module_autogen/: mocs_compilation.cpp
build-Gauge_module-Desktop-Debug/Gauge_module_autogen/EWIEGA46WW/: moc_Clock.cpp  moc_speedProvider.cpp  qrc_qml.cpp
build-IC_GUI-Desktop-Debug/: CMakeCache.txt  IC_GUI  IC_GUI.cbp  Makefile  cmake_install.cmake
build-IC_GUI-Desktop-Debug/IC_GUI_autogen/: mocs_compilation.cpp
build-IC_GUI-Desktop-Debug/IC_GUI_autogen/EWIEGA46WW/: qrc_qml.cpp
right_part/Instrument_cluster_right/: CMakeLists.txt  main.cpp  main.qml  qml.qrc  rpm_gauge.cpp
right_part/build-Instrument_cluster_right-Desktop-Debug/: CMakeCache.txt  Instrument_cluster_right  Instrument_cluster_right.cbp  Makefile  cmake_install.cmake
right_part/build-Instrument_cluster_right-Desktop-Debug/Instrument_cluster_right_autogen/: mocs_compilation.cpp
right_part/build-Instrument_cluster_right-Desktop-Debug/Instrument_cluster_right_autogen/EWIEGA46WW/: moc_rpm_gauge.cpp  qrc_qml.cpp
(+15 files in other folders)
